# ralf

./: .travis.yml  Cargo.toml  LICENSE  README.md  index.html
examples/: main.rs
master/: search-index.js
master/flat_map/: index.html  sidebar-items.js
master/flat_map/flat_map/: enum.Entry.html  index.html  (+10 more)
master/log/: enum.LogLevel.html  enum.LogLevelFilter.html  struct.LogLocation.html
master/protobuf/: enum.UnknownValue.html  enum.UnknownValueRef.html  index.html  struct.CachedSize.html  struct.UnknownFields.html  struct.UnknownFieldsIter.html  struct.UnknownValues.html  struct.UnknownValuesIter.html
master/quick_error/: index.html  macro.quick_error.html
master/raft/: INVALID_ID.v.html  ProgressSet.t.html  RaftLog.t.html  ReadOnlyOption.t.html  constant.INVALID_ID.html  constant.INVALID_INDEX.html  enum.Error.html  enum.ProgressState.html  enum.ReadOnlyOption.html  enum.StateRole.html  enum.StorageError.html  fn.quorum.html  fn.vote_resp_msg_type.html  index.html  quorum.v.html  sidebar-items.js  struct.Config.html  struct.Inflights.html  struct.Progress.html  struct.ProgressSet.html  struct.Raft.html  struct.RaftLog.html  struct.ReadState.html  struct.SoftState.html  struct.Status.html  struct.Unstable.html  type.Result.html
master/ralf/: LoggingReducer.t.html  PureReducer.t.html  StateMachine.t.html  index.html  sidebar-items.js  struct.Action.html  struct.LoggingReducer.html  struct.PureReducer.html  struct.State.html  struct.StateMachine.html  trait.Reducer.html
src/: action.rs  cluster.rs  lib.rs  reducer.rs  state.rs  state_machine.rs
(+438 files in other folders)
